@@ -66,12 +66,15 @@ void JTL::send( Session* session, int resolution, int tile ){
   TileManager tilemanager( session->tileCache, *session->image, session->watermark, session->jpeg, session->logfile, session->loglevel );
 
   CompressionType ct;
+
+  // Request uncompressed tile if raw pixel data is required for processing
   if( (*session->image)->getNumBitsPerPixel() > 8 || (*session->image)->getColourSpace() == CIELAB
       || (*session->image)->getNumChannels() == 2 || (*session->image)->getNumChannels() > 3
-      || session->view->getContrast() != 1.0 || session->view->getGamma() != 1.0
-      || session->view->getRotation() != 0.0 || session->view->shaded
-      || session->view->cmapped || session->view->inverted
-      || session->view->ctw.size() ) ct = UNCOMPRESSED;
+      || ( session->view->colourspace==GREYSCALE && (*session->image)->getNumChannels()==3 &&
+	   (*session->image)->getNumBitsPerPixel()==8 )
+      || session->view->floatProcessing()
+      || session->view->getRotation() != 0.0 || session->view->flip != 0
+      ) ct = UNCOMPRESSED;
   else ct = JPEG;
 
 
